--- a/src/ui/field/Field.module.scss
+++ b/src/ui/field/Field.module.scss
@@ -1,14 +1,3 @@
 .input {
-	@apply relative block;
-
-	> input {
-		@apply block w-full appearance-none rounded-md bg-gray-600 py-3 px-2 font-semibold text-white outline-none transition-shadow;
-
-		&:focus {
-			@apply shadow outline-none;
-		}
-
-		&::placeholder {
-		}
-	}
+	@apply w-full appearance-none bg-transparent py-3 px-2 font-semibold text-main-900 outline-none transition-shadow;
 }
