--- a/src/widgets/game-search/GameSearch.module.scss
+++ b/src/widgets/game-search/GameSearch.module.scss
@@ -1,5 +1,5 @@
 .container {
-	@apply flex h-full w-full items-center justify-center;
+	@apply -mt-5 flex h-full w-full items-center justify-center;
 
 	.wrapper {
 		@apply flex flex-col gap-5;
