--- a/src/modules/search/GameSearch.module.scss
+++ b/src/modules/search/GameSearch.module.scss
@@ -6,5 +6,10 @@
 		> h1 {
 			@apply text-2xl font-bold text-white;
 		}
+
+		.search_container {
+			@apply relative;
+			min-width: 30rem;
+		}
 	}
 }
