--- a/src/components/search-results/list/List.module.scss
+++ b/src/components/search-results/list/List.module.scss
@@ -19,4 +19,10 @@
 	@media (hover: hover) {
 		@apply hover:bg-gray-200;
 	}
+
+	&:focus,
+	&:focus-visible,
+	&:focus-within {
+		@apply bg-gray-200 outline-none;
+	}
 }
