--- a/src/modules/search/GameSearch.module.scss
+++ b/src/modules/search/GameSearch.module.scss
@@ -9,7 +9,10 @@
 
 		.search_container {
 			@apply relative;
-			min-width: 30rem;
+			min-width: 100%;
+			@screen sm {
+				min-width: 30rem;
+			}
 		}
 	}
 }
