--- a/src/ui/logo/Logo.module.scss
+++ b/src/ui/logo/Logo.module.scss
@@ -1,11 +1,11 @@
 .logo {
-	@apply p-1 font-semibold text-main-200;
+	@apply p-1 font-semibold text-complimentary-200;
 	font-size: 0.85rem;
 	> span {
 		@apply mx-1;
 	}
 	> span:first-child {
-		@apply text-secondary-200;
+		@apply text-white;
 	}
 
 	@screen sm {
