--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -1,5 +1,5 @@
 .main {
-	@apply relative rounded-md bg-complimentary-500  p-2 text-sm text-white opacity-80 transition-all duration-150;
+	@apply relative rounded-full bg-complimentary-500  p-2 text-sm text-white opacity-90 transition-all duration-150;
 	letter-spacing: 0.05rem;
 	> div:last-child {
 		@apply pointer-events-none absolute opacity-0;
@@ -12,7 +12,7 @@
 	}
 
 	@screen md {
-		@apply rounded-md py-1.5 px-2 text-sm font-bold;
+		@apply rounded-full py-1.5 px-2 text-sm font-bold;
 	}
 }
 
