--- a/src/components/game-list/GameList.module.scss
+++ b/src/components/game-list/GameList.module.scss
@@ -1,10 +1,12 @@
 .container {
 	@apply flex flex-col gap-5 rounded-lg bg-main-800;
+	width: 100%;
 	box-shadow: 0.25rem 0.25rem 1rem 1rem rgba(0, 0, 0, 0.201);
-
 	.img_container {
 		@apply flex items-center justify-center overflow-hidden rounded-md;
 		width: 100%;
+		min-height: 12rem;
+		max-height: 15rem;
 		@screen sm {
 			min-width: 13rem;
 		}
